<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) Microsoft. All rights reserved.
Licensed under the MIT license.
See full license at the bottom of this file.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.microsoft.artcurator.ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/txt_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/submissions_dir" />

        <EditText
            android:id="@+id/submissions_dir"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_actions"
            android:textColor="@color/text_vl" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/txt_light" />

        <CheckBox
            android:id="@+id/like_mark_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_read"
            android:textColor="@color/text_vl" />

        <CheckBox
            android:id="@+id/like_send_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_response"
            android:textColor="@color/text_vl" />

        <EditText
            android:id="@+id/like_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
            android:maxLines="4"
            android:minLines="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dislike_actions"
            android:textColor="@color/text_vl" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/txt_light" />

        <CheckBox
            android:id="@+id/dislike_mark_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_read"
            android:textColor="@color/text_vl" />

        <CheckBox
            android:id="@+id/dislike_send_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_response"
            android:textColor="@color/text_vl" />

        <EditText
            android:id="@+id/dislike_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
            android:maxLines="4"
            android:minLines="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acct_opts"
            android:textColor="@color/text_vl" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/txt_light" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="1" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:text="@string/sign_out" />

    </LinearLayout>
</ScrollView>

    <!--
    // *********************************************************
    //
    // O365-Android-Art Curator
    //
    // Copyright (c) Microsoft Corporation
    // All rights reserved.
    //
    // MIT License:
    // Permission is hereby granted, free of charge, to any person obtaining
    // a copy of this software and associated documentation files (the
    // "Software"), to deal in the Software without restriction, including
    // without limitation the rights to use, copy, modify, merge, publish,
    // distribute, sublicense, and/or sell copies of the Software, and to
    // permit persons to whom the Software is furnished to do so, subject to
    // the following conditions:
    //
    // The above copyright notice and this permission notice shall be
    // included in all copies or substantial portions of the Software.
    //
    // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
    // EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
    // MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
    // NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
    // LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
    // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
    // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    //
    // *********************************************************
    -->